--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ hr {
 	border-right: none;
 	border-left: none;
 	border-bottom: 1px solid #ddd;
+	margin: 20px 0;
 }
 
 /****************
@@ -122,6 +123,11 @@ hr {
 /****************
 ***** STYLES *****
 ****************/
+.experiment {
+	margin-bottom: 40px;
+	padding-bottom: 30px;
+	border-bottom: 2px solid #ddd;
+}
 .home-intro {
 	background-color: #EBEEF2;
 	font-size: 22px;
@@ -183,7 +189,7 @@ hr {
 	background-color: #292929;
 	border: none;
 }
-.button {
+button, .button {
 	font-size: 20px;
 	background: #c75724;
 	background-image: linear-gradient(to bottom, #c75724 0%,#BF4E1B 100%);
@@ -194,13 +200,14 @@ hr {
 	border: 1px solid;
 	border-radius: 4px;
 	border-color: #DE612C #DE612C #BF3900 #DE612C;
+	text-transform: uppercase;
 }
-.button:hover {
+button:hover, .button:hover {
 	background-image: none;
 	cursor: pointer;
 	border-color: #BF3900;
 }
-.button:active {
+button:active, .button:active {
 	box-shadow: inset 0px 3px 5px #BF3900;
 	text-shadow: none;
 }
@@ -284,6 +291,41 @@ button.close {
 	top: -2px;
 	right: -21px;
 	line-height: 20px;
+}
+
+/****************
+***** TOOLTIPS *****
+****************/
+.tooltip {
+	position: relative;
+}
+.tooltip span {
+  	display:none;
+  	position:absolute;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	padding: 5px 10px;
+	font-size: 13px;
+	border-radius: 3px;
+	box-shadow:2px 2px 10px gray;
+	background-color: #292929;
+	color: #fff;
+	max-width: 300px;
+	text-transform: lowercase;
+}
+.tooltip span:after {
+	position: absolute;
+	bottom: -6px;
+	left: 20px;
+    content: '';
+    border-top: solid 9px #292929;
+    border-left: solid 10px transparent;
+    border-right: solid 10px transparent;
+
+}
+.tooltip:hover span{
+	display: block;
 }
 
 /****************
