--- a/style.css
+++ b/style.css
@@ -49,6 +49,13 @@ hr {
 	border-bottom: 1px solid #ddd;
 	margin: 20px 0;
 }
+code {
+	border: 1px solid #ddd;
+	background-color: #eee;
+	padding: 2px;
+	border-radius: 2px;
+	font-size: smaller;
+}
 
 /****************
 ***** NAV *****
@@ -56,6 +63,7 @@ hr {
 .primary-nav {
 	width: 100%;
 	background-color: #C75724;
+	border-bottom: 5px solid #ddd
 }
 .nav-wrapper {
 	max-width: 960px;
@@ -89,15 +97,19 @@ hr {
 ***** GRID *****
 ****************/
 .grid-layout {
+	width: 100%;
 	max-width: 960px;
 	margin: 0 auto;
 }
 .col-1,.col-2,.col-3 {
+	width: 30%;
 	max-width: 290px;
+	min-width: 200px;
 	float: left;
 	margin: 0 15px;
 }
 .col-1-2,.col-2-3 {
+	width: 60%;
 	max-width: 630px;
 	width: 100%;
 }
@@ -110,6 +122,7 @@ hr {
 	float: right;
 }
 .col-1-2-3 {
+	width: 100%;
 	max-width: 960px;
 	margin: 60px 0;
 }
@@ -123,6 +136,12 @@ hr {
 /****************
 ***** STYLES *****
 ****************/
+.post-meta {
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	padding: 5px 0;
+	font-size: smaller;
+}
 .experiment {
 	margin-bottom: 40px;
 	padding-bottom: 30px;
@@ -131,14 +150,15 @@ hr {
 .home-intro {
 	background-color: #EBEEF2;
 	font-size: 22px;
-	border-bottom: 2px solid #ddd;
+	/*border-bottom: 5px solid #ddd;*/
 }
-.title-headline {
+.title-headline, .title-headline a, .title-headline a:hover {
 	font-size: 80px;
 	font-weight: 400;
 	display: block;
 	color: #fff;
 	float: left;
+	background: none;
 }
 .profile-photo {
 	background-image: url("tim.JPG");
@@ -302,10 +322,12 @@ button.close {
 .tooltip span {
   	display:none;
   	position:absolute;
+  	width: auto;
 	z-index: 1;
 	left: 0;
-	top: 0;
+	top: -35px;
 	padding: 5px 10px;
+	margin: 0;
 	font-size: 13px;
 	border-radius: 3px;
 	box-shadow:2px 2px 10px gray;
@@ -313,6 +335,7 @@ button.close {
 	color: #fff;
 	max-width: 300px;
 	text-transform: lowercase;
+	white-space: nowrap;
 }
 .tooltip span:after {
 	position: absolute;
@@ -326,6 +349,7 @@ button.close {
 }
 .tooltip:hover span{
 	display: block;
+	padding: 5px 10px;
 }
 
 /****************
