added active class for primary nav links

--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ hr {
 	font-family: 'Merriweather', serif;
 	padding: 5px 10px;
 }
-.nav-links a:hover {
+.nav-links a:hover,
+.nav-links a.active {
 	background-color: #292929;
 }
 
