added journal page

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -49,6 +49,13 @@ hr {
 	border-bottom: 1px solid #ddd;
 	margin: 20px 0;
 }
+code {
+	border: 1px solid #ddd;
+	background-color: #eee;
+	padding: 2px;
+	border-radius: 2px;
+	font-size: smaller;
+}
 
 /****************
 ***** NAV *****
@@ -91,31 +98,34 @@ hr {
 ****************/
 .grid-layout {
 	max-width: 960px;
+	width: 100%;
 	margin: 0 auto;
 }
 .col-1,.col-2,.col-3 {
 	max-width: 290px;
+	width: 30.208333333%;
 	float: left;
-	margin: 0 15px;
+	margin: 0 1.5625%;
 }
 .col-1-2,.col-2-3 {
-	max-width: 630px;
-	width: 100%;
+	max-width: 625px;
+	width: 65.104166666%;
 }
 .col-1-2 {
-	margin: 0 15px;
+	margin-right: 1.5625%;
 	float: left;
 }
 .col-2-3 {
-	margin-left: 15px;
-	float: right;
+	margin-left: 1.5625%;
+	float: left;
 }
 .col-1-2-3 {
 	max-width: 960px;
+	width: 100%;
 	margin: 60px 0;
 }
 .home-intro .col-2-3 {
-	padding: 30px 15px;
+	padding: 30px 1.5625%;
 }
 .home-intro .grid-layout {
 	padding: 40px 0;
@@ -124,6 +134,12 @@ hr {
 /****************
 ***** STYLES *****
 ****************/
+.post-meta {
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	padding: 5px 0;
+	font-size: smaller;
+}
 .experiment {
 	margin-bottom: 40px;
 	padding-bottom: 30px;
@@ -134,12 +150,15 @@ hr {
 	font-size: 22px;
 	border-bottom: 2px solid #ddd;
 }
-.title-headline {
+.title-headline a {
 	font-size: 80px;
 	font-weight: 400;
 	display: block;
 	color: #fff;
 	float: left;
+}
+.title-headline a:hover {
+	background: none;
 }
 .profile-photo {
 	background-image: url("tim.JPG");
@@ -303,17 +322,19 @@ button.close {
 .tooltip span {
   	display:none;
   	position:absolute;
+  	width: auto;
 	z-index: 1;
 	left: 0;
-	top: 0;
+	top: -35px;
 	padding: 5px 10px;
+	margin: 0;
 	font-size: 13px;
 	border-radius: 3px;
 	box-shadow:2px 2px 10px gray;
 	background-color: #292929;
 	color: #fff;
-	max-width: 300px;
 	text-transform: lowercase;
+	white-space: nowrap;
 }
 .tooltip span:after {
 	position: absolute;
@@ -327,6 +348,34 @@ button.close {
 }
 .tooltip:hover span{
 	display: block;
+	padding: 5px 10px;
+}
+
+/****************
+***** JOURNAL ARTICLES *****
+****************/
+article {
+	border-right: 2px solid #ddd;
+	margin: 60px 0 0 0;
+	padding: 0 15px 15px 0;
+	position: relative;
+}
+article p:first-of-type {
+	text-indent: 0;
+	font-style: italic;
+}
+article p {
+	text-indent: 1em;
+}
+article date {
+	display: inline-block;
+	padding: 10px;
+	background-color: #ddd;
+	color: #fff;
+	border-radius: 0 5px 5px 0;
+	position: absolute;
+	top: 0;
+	right: -91px;
 }
 
 /****************
@@ -363,7 +412,6 @@ button.close {
 .clearfix {
   *zoom: 1;
 }
-
 /* COLORS **********************
 
 dark: #2B2D36;
