--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -62,13 +62,12 @@ code {
 ****************/
 .primary-nav {
 	background-color: #C75724;
-	border-bottom: 5px solid #ddd
 }
 .nav-wrapper {
 	max-width: 960px;
 	width: 100%;
 	margin: 0 auto;
-	padding: 20px 0 0 0;
+	padding: 20px 0;
 }
 .nav-links {
 	padding: 50px 0 0 0;
@@ -108,17 +107,11 @@ code {
 	margin: 60px 0;
 }
 .col-1,.col-2,.col-3 {
-	width: 30%;
-	max-width: 290px;
-	min-width: 200px;
 	width: 30.208333333%;
 	float: left;
 	margin: 0 1.5625%;
 }
 .col-1-2,.col-2-3 {
-	width: 60%;
-	max-width: 630px;
-	width: 100%;
 	max-width: 625px;
 	width: 65.104166666%;
 }
@@ -126,26 +119,34 @@ code {
 	margin-right: 1.5625%;
 	float: left;
 }
+.col-1-2:first-of-type {
+	margin-top: 60px;
+}
 .col-2-3 {
 	margin-left: 1.5625%;
 	float: left;
 }
 .home-intro .col-2-3 {
-	padding: 30px 1.5625%;
+	padding-top: 30px;
 }
 .home-intro .grid-layout {
-	padding: 40px 0;
+	padding: 20px 0;
+}
+.home-intro {
+	background-color: #EBEEF2;
+	font-size: 22px;
 }
 
 /****************
-***** STYLES *****
+***** CUSTOM STYLES *****
 ****************/
 .skill {
 	display: block;
-	width: attr('data-width'+'px');
+	width: 100%;
 	padding: 20px 10px;
 	margin: 10px 0;
-	background-color: green;
+	background-color: #292929;
+	color: #fff;
 }
 .post-meta {
 	border-top: 1px solid #ddd;
@@ -158,11 +159,6 @@ code {
 	padding-bottom: 30px;
 	border-bottom: 2px solid #ddd;
 }
-.home-intro {
-	background-color: #EBEEF2;
-	font-size: 22px;
-	/*border-bottom: 5px solid #ddd;*/
-}
 .title-headline, .title-headline a, .title-headline a:hover {
 	font-size: 80px;
 	font-weight: 400;
@@ -171,34 +167,11 @@ code {
 	float: left;
 	background: none;
 }
-.profile-photo {
-	background-image: url("tim.JPG");
-	border-radius: 200px;
+.home-intro .col-1 img {
+	border-radius: 50%;
 	border: 5px solid #ddd;
-	width: 240px;
-	height: 240px;
 	margin-top: 10px;
-}
-.six-f {
-	border: 4px solid #C75724;
-	border-radius: 100px;
-	color: #C75724;
-	padding: 5px 4px;
-	font-size: 20px;
-	font-weight: 900;
-}
-.studios-logo {
-	font-family: 'Merriweather', serif;
-	color: #C75724;
-	margin: 20px 0;
-}
-.studios-logo a {
-	color: #C75724;
-	font-weight: normal;
-	font-size: 20px;
-}
-.studios-logo a:hover {
-	background: none;
+	width: 100%;
 }
 
 /****************
@@ -371,6 +344,9 @@ article {
 	padding: 0 15px 15px 0;
 	position: relative;
 }
+article:first-of-type {
+	margin-top: 0;
+}
 article p:first-of-type {
 	text-indent: 0;
 	font-style: italic;
@@ -395,6 +371,8 @@ article date {
 .primary-footer {
 	background-color: #eee;
 	border-top: 2px solid #ddd;
+	text-align: center;
+	color: #bbb;
 }
 
 /****************
@@ -423,6 +401,56 @@ article date {
 .clearfix {
   *zoom: 1;
 }
+
+/******************* 
+*** MEDIA QUERIES 
+*******************/
+@media (max-width: 800px){
+	.nav-links {
+		padding: 1em;
+	}
+	.nav-links a {
+		font-size: .6em;
+		padding: 10px 5px;
+	}
+	.title-headline, .title-headline a, .title-headline a:hover {
+		font-size: 1.75em;
+	}
+	.col-1,.col-2 {
+		width: 46.875%;
+	}
+	.col-3 {
+		width: 100%;
+	}
+	.home-intro .col-1 {
+		width: 30%;
+	}
+}
+@media (max-width: 650px) {
+	.nav-links {
+		display: none;
+	}
+	.col-1 img {
+		display: none;
+	}
+	.home-intro .col-2-3 {
+		width: 100%;
+	}
+	h1,h2,h3,h4 {
+		font-size: 1.2em;
+	}
+	.col-1,.col-2,.col-3 {
+		float: none;
+		width: 100%;
+	}
+}
+
+
+
+
+
+
+
 /* COLORS **********************
 
 dark: #2B2D36;
